--- a/99zaver.tex
+++ b/99zaver.tex
@@ -1,2 +1,16 @@
 \chapter*{Závěr}
 \addcontentsline{toc}{chapter}{Závěr}
+
+Nově vzniklá hra TickoaTTwo má nyní implementaci, kterou si může kdokoli zahrát
+online s více lidmi. Je dostupná na adrese \url{https://tickoattwo.mariansam.eu/}.
+Zdrojový kód je zveřejněn pod MIT licencí na adrese
+\url{https://github.com/mariansam/tickoattwo}, ten může sloužit nejen jako
+referenční implementace hry TickoaTTwo, ale i jako příklad propojení tRPC s
+WebSockety.
+
+Zároveň jsou sepsaná pravidla a vysvětlená optimální strategie, obojí může
+sloužit jako základ pro další zkoumání této hry.
+
+Věřím v to, že se hra uchytí jako tradiční volba při večerech strávených s
+přáteli online, a i kdyby ne, snad si na ni občas někdo vzpomene alespoň jako
+na \enquote{ten komický nápad, který někdo vzal vážně}.
