--- a/text.bib
+++ b/text.bib
@@ -6,13 +6,6 @@
     year      = 2022,
 }
 
-@online{nextjs,
-    title     = "Next.js",
-    author    = {{Vercel and the open-source community}},
-    url       = "https://nextjs.org/docs",
-    url-date  = {2023-04-04}
-}
-
 @online{jenkins22,
     title       = "I Made BETTER Tic-Tac-Toe",
     author      = "Oats Jenkins",
@@ -34,7 +27,7 @@
 }
 
 @online{stackoverflow23,
-    author={{S}tack {O}verflow},
+    author={{Stack Overflow}},
     title={{S}tack {O}verflow Developer Survey 2023},
     url={https://survey.stackoverflow.co/2023/},
     date={2023},
@@ -61,4 +54,20 @@
   author={Sean Adams and Peter Dawson and John Foster and Tony Seddon},
   year={2011},
   publisher={Peachpit Press}
+}
+
+@software{diagrams,
+    author={{JGraph Ltd}},
+    title={{diagrams.net}},
+    version={v22.1.4},
+    url={https://www.drawio.com/},
+    year={2023},
+}
+
+@software{react-qr,
+    author={Paul O’Shannessy},
+    title={qrcode.react},
+    url={https://github.com/zpao/qrcode.react},
+    version={v3.1.0},
+    year={2022},
 }
