--- a/00uvod.tex
+++ b/00uvod.tex
@@ -15,6 +15,8 @@ V říjnu 2022 vydal americký youtuber Oats Jenkins video I Made BETTER
 Tic-Tac-Toe (Udělal jsem lepší piškvorky) \cite{jenkins22}. V něm popisuje
 \enquote{americké} 3x3 piškvorky a jejich problémy. Následně přichází s
 upravenou verzí hry, ve které jsou dané problémy vyřešeny. Alternativa se
-jmenuje TickoaTTwo. Tato práce popisuje výhody a nevýhody nové hry, analyzuje
-ji z pohledu teorie her, hledá její optimální strategii a popisuje způsob
-implementace jako online multiplayer hry pomocí moderních webových technologií.
+jmenuje TickoaTTwo (čteno [tik out tů]).
+
+Tato práce popisuje výhody a nevýhody nové hry, analyzuje ji z pohledu teorie
+her, hledá její optimální strategii a popisuje způsob implementace jako online
+multiplayer hry pomocí moderních webových technologií.
