--- a/text.tex
+++ b/text.tex
@@ -83,12 +83,13 @@
 
 %%% Poděkování
 \makethanks{
-    Mé poděkování patří v první řadě paní profesorce Mgr. Markétě Wolfové za
-    vedení mé práce a podpoře mě i mých spolužáků.
+    Mé poděkování patří v~první řadě paní profesorce Mgr. Markétě Wolfové,
+    nejen za vedení mé práce, ale hlavně za možnost maturovat z informatiky a
+    za zvyšování úrovně našeho gymnázia.
 
-    Dále pak Jakubovi Hamplovi, se kterým jsme celý proces psaní odborné práci
-    prošli spolu, Kateřině Michálkové za psychickou podporu, Matějovi Volfovi
-    za pomoc s hledáním optimální strategie a celé skupině 0d9e.tech za
+    Dále pak Jakubovi Hamplovi, se kterým jsme celý proces psaní odborné práce
+    prošli společně, Kateřině Michálkové za psychickou podporu, Matějovi
+    Volfovi za pomoc s~hledáním optimální strategie a celé skupině 0d9e.tech za
     kritickou zpětnou vazbu, vyrušování od práce a zvedání nálady.
 }
 
@@ -97,9 +98,9 @@
 \pagestyle{empty}
 
 \section*{Anotace}
-Práce popisuje implementaci hry TickoaTTwo popsané ve videu I Made BETTER
-Tic-Tac-Toe (Udělal jsem lepší piškvorky) jako webové aplikace a analýzu této
-hry z pohledu teorie her.
+Práce popisuje implementaci hry TickoaTTwo popsané ve videu I~Made BETTER
+Tic-Tac-Toe (Udělal jsem lepší piškvorky) jako webové aplikace a  této
+hry z~pohledu teorie her.
 
 \subsection*{Klíčová slova}
 piškvorky, TickoaTTwo, webová aplikace, T3 Stack
@@ -108,7 +109,7 @@ piškvorky, TickoaTTwo, webová aplikace, T3 Stack
 
 \section*{Annotation}
 This thesis describes the implementation of the game TickoaTTwo described in
-the video I Made BETTER Tic-Tac-Toe as a web application and analyzes it from
+the video I~Made BETTER Tic-Tac-Toe as a web application and analyzes it from
 the game theory point of view.
 
 \subsection*{Keywords}
