--- a/text.tex
+++ b/text.tex
@@ -43,10 +43,10 @@
 \addbibresource{text.bib}
 
 \titlecz{TickoaTTwo -- implementace moderních piškvorek}
-\titleen{TickoaTTwo -- implementation of modern tick-tac-toe}
+\titleen{TickoaTTwo -- implementation of modern tic-tac-toe}
 \author{Marian Šámal}
 \field{18}
-\school{Gymnázium Jana~Palacha, Pod Vrchem 3421, Mělník 276 01}
+\school{Gymnázium Jana Palacha, Mělník, Pod Vrchem 3421}
 \mentor{Mgr. Markéta Wolfová}
 \mentorstatement{Mgr. Markéty Wolfové}  % druhý pád (pod vedením koho čeho)
 \region{Středočeský}
@@ -84,7 +84,7 @@
 %%% Poděkování
 \makethanks{
     Mé poděkování patří v~první řadě paní profesorce Mgr. Markétě Wolfové,
-    nejen za vedení mé práce, ale hlavně za možnost maturovat z informatiky a
+    nejen za vedení mé práce, ale hlavně za možnost maturovat z~informatiky a
     za zvyšování úrovně našeho gymnázia.
 
     Dále pak Jakubovi Hamplovi, se kterým jsme celý proces psaní odborné práce
@@ -99,8 +99,8 @@
 
 \section*{Anotace}
 Práce popisuje implementaci hry TickoaTTwo popsané ve videu I~Made BETTER
-Tic-Tac-Toe (Udělal jsem lepší piškvorky) jako webové aplikace a  této
-hry z~pohledu teorie her.
+Tic-Tac-Toe (Udělal jsem lepší piškvorky) jako webové aplikace a analyzuje tuto
+hru z~pohledu teorie her.
 
 \subsection*{Klíčová slova}
 piškvorky, TickoaTTwo, webová aplikace, T3 Stack
@@ -113,7 +113,7 @@ the video I~Made BETTER Tic-Tac-Toe as a web application and analyzes it from
 the game theory point of view.
 
 \subsection*{Keywords}
-tick-tac-toe, TickoaTTwo, web application, T3 Stack
+tic-tac-toe, TickoaTTwo, web application, T3 Stack
 
 
 %%% Obsah
@@ -148,6 +148,7 @@ tick-tac-toe, TickoaTTwo, web application, T3 Stack
 \nocite{*}
 \addcontentsline{toc}{chapter}{Literatura}
 \renewcommand{\baselinestretch}{1.5}
+
 
 \lstlistoflistings
 \addcontentsline{toc}{chapter}{Seznam programů}{\linespread{1}\selectfont}
