--- a/20vyvoj.tex
+++ b/20vyvoj.tex
@@ -382,7 +382,7 @@ testování s~uživateli během vývoje. K~vytvoření QR kódu se používá kn
 
 Hrací plocha je v~prohlížeči vykreslena vektorově jako SVG pomocí několika
 React komponentů. V~kódu je zapsaných devět cest, které ohraničují hrací
-políčka. Jednou jsou na vrchu obrázku a se používají pro rozpoznání najetí myši
-na herní políčko. Podruhé jsou na spodku obrázku a používají se pro zvýraznění
-herního políčka, na které uživatel najel myší. Po najetí se zvýrazňují pouze
-políčka, na která uživatel může v~danou chvíli kliknout.
+políčka. Jednou jsou v~přední části obrázku a používají se pro rozpoznání
+najetí myši na herní políčko. Podruhé jsou v~zadní části obrázku a používají se
+pro zvýraznění herního políčka, na které uživatel najel myší. Po najetí se
+zvýrazňují pouze políčka, na která uživatel může v~danou chvíli kliknout.
