--- a/99zaver.tex
+++ b/99zaver.tex
@@ -2,7 +2,7 @@
 \addcontentsline{toc}{chapter}{Závěr}
 
 Nově vzniklá hra TickoaTTwo má nyní implementaci, kterou si může kdokoli zahrát
-online s~více lidmi. Je dostupná na adrese \url{https://tickoattwo.mariansam.eu/}.
+s protihráčem online. Je dostupná na adrese \url{https://tickoattwo.mariansam.eu/}.
 Zdrojový kód je zveřejněn pod MIT licencí na adrese
 \url{https://github.com/mariansam/tickoattwo}, ten může sloužit nejen jako
 referenční implementace hry TickoaTTwo, ale i jako příklad propojení tRPC
